deployment/tdfol/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tdfol
  labels:
    name: tdfol
    environment: production
    managed-by: kubernetes
